--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "displayName": "Password picker",
   "version": "0.0.0",
   "description": "A basic Plasmo extension.",
-  "author": "ext.zhuyunfeng",
+  "author": "zhuyunfeng",
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build"
   },
   "dependencies": {
-    "plasmo": "0.50.1",
+    "plasmo": "0.80.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -25,6 +25,9 @@
   "manifest": {
     "host_permissions": [
       "https://*/*"
+    ],
+    "permissions": [
+      "contextMenus"
     ]
   }
 }
